--- a/demo.html
+++ b/demo.html
@@ -6,20 +6,11 @@
 </head>
 <body>	
 	<select name="country" id="country" role="jxcombo" data-source="data/countries.json" ></select>
-	<select name="city" id="city" role="jxcombo" data-source="data/cities.json"  ></select>
-	<select name="provincia" id="provincia" role="jxcombo" data-source="data/provincia.json" data-parent="#country"></select>
+	<select name="city" id="city" role="jxcombo" data-source="data/cities.json" data-parent="#country" ></select>
+	<select name="provincia" id="provincia" role="jxcombo" data-source="data/provincia.json" data-parent="#city" ></select>
 	
 	<script type="text/javascript" src="src/jquery-1.10.2.js" ></script>
 	<script type="text/javascript" src="src/jxcombo-0.0.1.js" ></script>
-
-	<script>
-		(function ($) {
-
-			//$("#country").jCombo("data/countries.json");
-			//$("#city").jCombo("data/cities.json?id=", { parent : '#country'} );
-
-		})(jQuery);
-		
-	</script>
+	
 </body>
 </html>
