--- a/demo.html
+++ b/demo.html
@@ -5,19 +5,37 @@
 	<title>JxCombo</title>
 </head>
 <body>	
-	<select name="country" id="country" role="jxcombo" data-source="data/countries.json" ></select>
-	<select name="city" id="city" role="jxcombo" data-source="data/cities.json" data-parent="#country" ></select>
+	<div>
+	<select name="country4" id="country4" role="jxcombo" data-source="data/countries.json" ></select>
+	<select name="city" id="city" role="jxcombo" data-source="data/cities.json" data-parent="#country4" ></select>
 	<select name="provincia" id="provincia" role="jxcombo" data-source="data/provincia.json" data-parent="#city" ></select>
-
-	<select id="country2" ></select>
-	<select id="city2"></select>
+</div>
+	
+	<div>
+		<select id="country"></select>
+		<select id="country2"></select>
+		<select id="country3"></select>
+	</div>
+	
 	
 	<script type="text/javascript" src="src/jquery-1.10.2.js" ></script>
 	<script type="text/javascript" src="src/jxcombo-0.0.1.js" ></script>
 
 	<script>
 		(function ( $ ){
-			$('#country2').jxcombo( { } );
+			$('#country').jxcombo( {
+				source : "data/countries.json"
+			} );
+
+			$('#country2').jxcombo( {
+				source : "data/cities.json",
+				parent : "#country"
+			} );
+
+			$('#country3').jxcombo( {
+				source : "data/cities.json",
+				parent : "#country"
+			} );
 		})( jQuery );
 	</script>
 	
